stoat/src/snapshots/tui/stoat__test_harness__close_returns_to_single.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: c
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[7m [0m






















[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                   1:1 [0m
