stoat/src/snapshots/tui/stoat__test_harness__command_palette_filter_empty.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: :
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[7m [0m


  [0m[35m┌ command palette ─────────────────────────────────────────────────────────┐[0m
  [0m[35m│[0m[33m:[0m [0m[30m[107m [0m                                                                       [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[30m[46m AbortRebase        discard the current rebase plan                       [0m[35m│[0m
  [0m[35m│[0m[97m AddSelectionBelow  [0m[90madd cursor below[0m[97m                                      [0m[35m│[0m
  [0m[35m│[0m[97m ClaudeSubmit       [0m[90msend to claude[0m[97m                                        [0m[35m│[0m
  [0m[35m│[0m[97m ClaudeToDockLeft   [0m[90mmove claude to left dock[0m[97m                              [0m[35m│[0m
  [0m[35m│[0m[97m ClaudeToDockRight  [0m[90mmove claude to right dock[0m[97m                             [0m[35m│[0m
  [0m[35m│[0m[97m ClaudeToPane       [0m[90mmove claude to pane[0m[97m                                   [0m[35m│[0m
  [0m[35m│[0m[97m CloseCommits       [0m[90mclose the commit-list view[0m[97m                            [0m[35m│[0m
  [0m[35m│[0m[97m ClosePane          [0m[90mclose pane[0m[97m                                            [0m[35m│[0m
  [0m[35m│[0m[97m CloseReview        [0m[90mclose the active review[0m[97m                               [0m[35m│[0m
  [0m[35m│[0m[97m CloseWorkspace     [0m[90mclose this workspace[0m[97m                                  [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[37mDrop the in-progress todo list without executing it and return to commits[0m [0m[35m│[0m
  [0m[35m│[0m[37mmode. No commits are rewritten.[0m                                           [0m[35m│[0m
  [0m[35m└──────────────────────────────────────────────────────────────────────────┘[0m



[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                   1:1 [0m
