stoat/src/snapshots/tui/stoat__test_harness__command_palette_filter_typing.snap
---
source: stoat/src/test_harness.rs
assertion_line: 134
expression: text
---
actions: c
focused: #1 of 1
mode: normal
size: 80x24
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ┌ command palette ─────────────────────────────────────────────────────────┐ │
│ │: Foc                                                                     │ │
│ │──────────────────────────────────────────────────────────────────────────│ │
│ │ FocusDown   focus pane down                                              │ │
│ │ FocusLeft   focus pane left                                              │ │
│ │ FocusNext   focus next pane                                              │ │
│ │ FocusPrev   focus previous pane                                          │ │
│ │ FocusRight  focus pane right                                             │ │
│ │ FocusUp     focus pane up                                                │ │
│ │──────────────────────────────────────────────────────────────────────────│ │
│ │Move focus to the pane below the current pane.                            │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
