stoat/src/snapshots/tui/stoat__test_harness__commits_empty_history.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_commits
focused: #1 of 1
mode: commits
size: 90x10
---
[0m[90mno commits[0m                          [0m[90m│no selection[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
                                    [0m[90m│[0m
[0m[1m[30m[43m COM [0m[1m[97m[100m repo [0m[97m[100mcommits                                                                        [0m
