stoat/src/snapshots/tui/stoat__test_harness__commits_navigate_last.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: G
focused: #1 of 1
mode: commits
size: 90x16
---
[0m[36m┌────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[33mc100000[0m [0m[97mfeat: add b.rs[0m             [0m[90m│[0m[1m[97m1 file, +1 -0[0m                                       [0m[36m│[0m
[0m[36m│[0m[33mc100000[0m [0m[97mchore: tweak a[0m             [0m[90m│[0m[97mA a.rs[0m                                        [0m[32m +1 [0m[31m-0[0m[36m│[0m
[0m[36m│[0m[7m[30m[107mc100000 feat: add a.rs             [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m[90m(end of history)[0m                   [0m[90m│[0m[33ma.rs --- 1/1 --- rust[0m                               [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m [0m[90m.....[0m                   [0m[90m│[0m [0m[90m   1 [0mfn [0m[32ma()[0m [0m[32m{}[0m           [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m│[0m                                   [0m[90m│[0m                                                    [0m[36m│[0m
[0m[36m└────────────────────────────────────────────────────────────────────────────────────────┘[0m
