stoat/src/snapshots/tui/stoat__test_harness__commits_open_review_readonly.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: o
focused: #1 of 1
mode: review
size: 90x16
---
[0m[33mb.rs --- 1/1 --- rust[0m                       [0m[90m│[0m
[0m[1m[36m│[0m[90m.....[0m                                      [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[97mfn [0m[32mb()[0m[97m [0m[32m{}[0m













[0m[1m[30m[46m REV [0m[1m[97m[100m repo [0m[97m[100m[scratch]                                                                      [0m
